--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,23 @@ cache:
     -  '$HOME/.gradle'
 script: "./gradlew clean build"
 
+
+before_deploy:
+  - zip -r freelec-springboot2-webservice *
+  - mkdir -p delploy
+  - mv freelec-springboot2-webservice.zip deploy/freelec-springboot2-webservice.zip
+
+deploy:
+  - provider: s3
+    access_key_id: $AWS_ACCESS_KEY
+    secret_access_key: $AWS_SECRET_KEY
+    bucket: freelec-springboot-build-zhenxi
+    region: ap-northeast-2
+    skip_cleanup: true
+    acl: private
+    local_dir: deploy
+    wait-until-deployed: true
+
 # CI 실행 완료 시 메일로 알람
 notifications:
   email:
