--- a/.travis.yml
+++ b/.travis.yml
@@ -32,13 +32,13 @@ deploy:
     wait-until-deployed: true
 
   - provider: codedeploy
-      access_key_id: $AWS_ACCESS_KEY # Travis repo settings에 설정된 값
-      secret_access_key: $AWS_SECRET_KEY # Travis repo settings에 설정된 값
-      bucket: freelec-springboot-build # S3 버킷
-      key: freelec-springboot2-webservice.zip # 빌드 파일을 압축해서 전달
+      access_key_id: $AWS_ACCESS_KEY
+      secret_access_key: $AWS_SECRET_KEY
+      bucket: freelec-springboot-build-zhenxi
+      key: freelec-springboot2-webservice.zip
       bundle_type: zip
-      application: freelec-springboot2-webservice # 웹 콘솔에서 등록한 CodeDeploy 어플리케이션
-      deployment_group: freelec-springboot2-webservice-group # 웹 콘솔에서 등록한 CodeDeploy 배포 그룹
+      application: freelec-springboot2-webservice
+      deployment_group: freelec-springboot2-webservice-group
       region: ap-northeast-2
       wait-until-deployed: true
 
